--- a/README
+++ b/README
@@ -1,48 +1,40 @@
 Signin System
 ============
-==newer==
-http://www.emirplicanic.com/php/simple-phpmysql-authentication-class
-So far I like the simplicity of this, and would like to make it more functional.
 
-* A way to add users.
-* encryption not optional
-* bcrypt encryption.
-* user pages
-* admin pages
+==Goals==
+===Simple===
+Being new to development, my code is simple. Part of the reason I'm doing this 
+is to learn. Because this system meets my level of understanding it has to be 
+simple.
 
+===Secure===
+Simple doesn't mean it can't be secure. Passwords are salted and hashed with 
+a bcrypt class (credit and thanks to stackoverflow user Andrew Moore). Database 
+inputs have been sanitized to the best of my understanding.
 
+This is a far from flawless. There are still plenty of security measures that 
+can be put in place.
 
-==old==
-It's a crude attempt of a signin system I'd like to rework one day. I'm storing this here for reference.
-
-===to do===
-* test sending of email
-* reset account function
-* user account pages
-* creation of admin accounts
-* SQL statement for database setup and initial admin user
-* enable password encryption
-** ''would be neat'': don't let users use a password from this list http://www.whatsmypass.com/the-top-500-worst-passwords-of-all-time
-* real time username availability check
-* real time password check (length, strength, not on list, match)
+===Expandable===
+This project is intended to be the foundation for other projects.
 
 
-===Goals===
-* Simple (at least from the user's perspective)
-* Passwords not stored in plain text encrypted and salted.
-* A way to protect against SQL injection.
-* Admin adjustable lockable/recoverable accounts.
-* Error tracking.
+==Tasks==
+* Second table for expanded user info (name, preference, rights level, etc.).
+* User Rights - Probably just two levels, user and admin. An open ended system 
+for future expansion would be nice.
+* Administrator Options - A place where administrators can change site wide 
+options. Also where Administrators can promote users to admin.
+* User Profiles - A place where users can update their own information.
+* Email Verification
+* Email Reset
+* Install file that sets up MySQL tables.
+* Real time email availability and password checks.
 
 
-===Things I find annoying from other login systems===
-* No way to recover/reset password.
-* Nothing to tell me if my username or password is wrong.
-* Having to retype my username every time I try a new password.
-* Login attempts set to 3.
+==Old Folder==
+Previous crude attempts I keep around for reference.
 
-===Password requirements===
-So often I find my auto-generated KeePass password is more secure, but doesn't contain a special character or some crap, just let me use what I want. At most a website should only set a limit on how short a password is (not how long!).
 
 ==Interesting Reading==
 * http://stackoverflow.com/questions/549/the-definitive-guide-to-forms-based-website-authentication/
@@ -52,3 +44,4 @@ So often I find my auto-generated KeePass password is more secure, but doesn't c
 * http://xato.net/
 * https://xato.net/passwords/more-top-worst-passwords/
 * http://en.wikibooks.org/wiki/PHP_Programming/User_login_systems
+http://www.whatsmypass.com/the-top-500-worst-passwords-of-all-time
